--- a/to_dos.html
+++ b/to_dos.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>Managing Time 101</title>
+
+<link rel="stylesheet" type="text/css" href="theme.css">
+
   </head>
 
   <body>
       
-<h1>Open To-dos</h1>
+<h1 class="titleclass">Open To-dos</h1>
 
 <ol>
    
@@ -19,7 +22,8 @@
 
 </ol>
 
-<a href="#">Add a new to-do</a> 
+<a href="/new_todo.html">Add a new to-do</a> 
+
   </body>
 </html>
 
