--- a/to_dos.html
+++ b/to_dos.html
@@ -10,15 +10,23 @@
   <body>
       
 <h1 class="titleclass">Open To-dos</h1>
-
+<div class="div1">
+    <table>
+        <tr>
+            <td>Cell A</td>
+            <td>Cell B</td>
+        </tr>
+    </table>
+</div>
+<div class="div2"></div>
 <ol>
    
-<li>Make the curriculum</li>
-<li>Buy workshop supplies</li>
-<li>Order food for Saturday and Sunday</li>
-<li>Check pre-work assignments</li>
-<li>Send workshop location to all the students</li>
-<li>Add a new to-do</li>
+<li class="firstpair">Make the curriculum</li>
+<li class="firstpair">Buy workshop supplies</li>
+<li class="secondpair">Order food for Saturday and Sunday</li>
+<li class="secondpair">Check pre-work assignments</li>
+<li class="thirdpair">Send workshop location to all the students</li>
+<li class="thirdpair">Add a new to-do</li>
 
 </ol>
 
