--- a/to_dos.html
+++ b/to_dos.html
@@ -8,17 +8,18 @@
   </head>
 
   <body>
-      
+      <a class="button">Add Problem</a>
 <h1 class="titleclass">Open To-dos</h1>
-<div class="div1">
-    <table>
-        <tr>
-            <td>Cell A</td>
-            <td>Cell B</td>
-        </tr>
-    </table>
-</div>
-<div class="div2"></div>
+
+    <div>Block1</div>
+    <div>Block2</div>
+    <div>Block3</div>
+    <span>Inline1</span>
+    <span>Inline2</span>
+    <span>Inline3</span>
+
+
+
 <ol>
    
 <li class="firstpair">Make the curriculum</li>
