--- a/to_dos.html
+++ b/to_dos.html
@@ -32,7 +32,10 @@
 </ol>
 
 <a href="/new_todo.html">Add a new to-do</a> 
-
+<form>
+    
+<textarea name="Text1"></textarea>
+</form>
   </body>
 </html>
 
