--- a/new_todo.html
+++ b/new_todo.html
@@ -3,7 +3,7 @@
   <head>
     <title>Managing Time 101</title>
 
-<link rel="stylesheet" type="text/css" href="theme.css">
+<link rel="stylesheet" type="text/css" href="theme2.css">
 
   </head>
 
@@ -14,7 +14,11 @@
 hello 
    
 
+<form>
 
+<textarea name="Text1"></textarea>
+
+</form>
 
 
   </body>
